--- a/Indra3.html
+++ b/Indra3.html
@@ -19,11 +19,11 @@
         <li class="li-cabeca">
           <a href="Indra.html" class="link">Home</a>
           <p class="barra">|</p>
-          <a href="Indra2.html" class="link">Sobre nos</a>
+          <a href="Indra2.html" class="link">Sobre nós</a>
           <p class="barra">|</p>
           <a href="Indra3.html" class="link">Contato</a>
           <p class="barra">|</p>
-          <a href="indra4.html" class="link">Prototipo</a>
+          <a href="indra4.html" class="link">Protótipo</a>
         </li>
       </ul>
     </nav>
@@ -85,3 +85,4 @@
   <script src="js/script3.js"></script>
 </body>
 </html>
+
