--- a/Indra2.html
+++ b/Indra2.html
@@ -23,7 +23,7 @@
           <p class="barra">|</p>
           <a href="Indra3.html" class="link">Contato</a>
           <p class="barra">|</p>
-          <a href="indra4.html" class="link">Prototipo</a>
+          <a href="indra4.html" class="link">Protótipo</a>
         </li>
       </ul>
     </nav>
@@ -103,3 +103,4 @@
     <script src="js/script.js"></script>
 </body>
 </html>
+
